--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -354,8 +354,17 @@ Many websites will use what is called CSS grid layouts, where you will have a he
 
     <div class="collapse" id="collapseExample">
         <div class="card card-body">
-           please enter your <strong>questions</strong>
+           please enter your questions
+            <textarea class="form-control" id="message-text"></textarea>
+        </form>
+		 <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Send message</button>
+      </div>
         </div>
+    </div>
+  </div>
+</div>
     </div>
 
 </div>
