--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -209,7 +209,7 @@ Many websites will use what is called CSS grid layouts, where you will have a he
     https://getbootstrap.com/docs/5.0/components/modal/
     -->
     <button type="button" class="button1" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Make an appointment!
+        Click here to make an appointment!
     </button>
 	</h1>
 
@@ -349,7 +349,7 @@ Many websites will use what is called CSS grid layouts, where you will have a he
     </div>
 	
 	<button class="button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-        Any questions to us?
+        Any questions to us? Click here
     </button>
 
     <div class="collapse" id="collapseExample">
