--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -57,7 +57,7 @@ Many websites will use what is called CSS grid layouts, where you will have a he
     https://getbootstrap.com/docs/5.0/components/alerts/
     -->
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <strong>Attention!</strong> Please complete the <strong>questionnaire</strong> before your arrival.
+        <strong>Attention!</strong> Please complete the <strong>Covid-19 questionnaire</strong> before your arrival.
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     <!--<div class="p-3 mb-2 bg-warning text-dark">State of emergency declared. See COVID-19 updates and check for location, program and service closures, cancellations and changes.</div>-->
