--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -183,6 +183,7 @@ Many websites will use what is called CSS grid layouts, where you will have a he
             <img src="images/doctor1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text"><img src="images/icon5.png" alt="logo" style="width:40px;">Dr. Sandy Brown</p>
+				<p>Senior dog veterinarian</p>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -195,7 +196,8 @@ Many websites will use what is called CSS grid layouts, where you will have a he
             <img src="images/doctor03.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text"><img src="images/icon5.png" alt="logo" style="width:40px;">Dr. Mary Green</p>
-            </div>
+				<p>Senior cat veterinarian</p>
+			</div>
         </div>
 		</div>
 		<br>
